[package]
name = "poddl"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive"] }
rss = "2.0.6"
sanitize-filename = "0.5.0"
ureq = "2.10.0"
url = "2.5.2"
