[package]
name = "poddl"
version = "0.3.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive"] }
jiff = "0.2.15"
rss = "2.0.6"
sanitize-filename = "0.5.0"
ureq = "3"
url = "2.5.2"
log = "0.4"
env_logger = "0.11"
